docs: create react app 보일러 플레이트 사용방법

--- a/main/React/리액트개요.md
+++ b/main/React/리액트개요.md
@@ -218,6 +218,47 @@ Virtual DOM에 대해 알기 전에 먼저, DOM이라는 것에 대해 이해할
 
 ### React App 만드는 방법
 
+![](https://velog.velcdn.com/images/ninto_2/post/368521ff-4ad9-4c8a-bacc-775e70530bc4/image.png)
+
+React는 결론적으로 `Node.js`기반의 Javascript UI 라이브러리이다.
+이 리액트 라이브러리 패키지를 그냥 다운로드 받는다고 바로 사용할 수 있는 것은 아니다.
+이런 리액트를 여러가지 다방면에서 도와줄 추가적인 라이브러리들이 필요하다.
+
+대다수의 리액트 사용자들이 리액트와 함께 사용하는 라이브러리, 패키지들은 대표적으로 `Webpack`과 `Babel`이 있다.
+`Webpack`은 모듈번들러 패키지인데, 간단하게 설명하자면 다수의 자바스크립트 파일을 하나의 파일로 합쳐주는 역할을 하는 패키지라고 생각할 수 있다.
+`Babel`은 자바스크립트의 컴파일러로 `JSX`라는 자바스크립트와 HTML을 혼용하여 사용하는 문법 등의 여러가지 쉽고 간단한 자바스크립트 코드들을 작성할 수 있도록 도와주는 패키지이다.
+이런 `Webpack`과 `Babel`의 역할은 생각보다 훨씬 거대하고 리액트를 사용하며 사용하게 되는 패키지들도 훨씬 많이 존재한다.
+
+리액트를 처음 다뤄보는 입장에서는 이 모든 패키지들을 다 설치하고, 역할을 이해하여 셋팅하는 것은 쉬운 일이 아닐 수 있다.
+그래서 이런 부수적인 패키지는 설치하지 않고, 리액트를 사용할 수 있는 방법에 대해 알아보자.
+
+![](https://velog.velcdn.com/images/ninto_2/post/03b2cfd6-580f-49ba-8d46-85b24b9eae6c/image.png)
+
+누군가가 리액트를 사용할 때 사용하는 패키지들을 미리 설치해놓고, 바로 사용해볼 수 있게 복잡한 환경 설정까지 미리 세팅해놓은 이런 패키지를 감싼 패키지를 이용하면 된다.
+이렇게 어떤 기술에 대해서 미리 기초 설정작업을 다 해놔서 기초세팅 작업을 제로로 만들어주는 도구들을 **Boiler Plate(보일러 플레이트)**라고 한다.
+Boiler Plate는 보일러를 찍어내는 틀이라는 뜻인데, 마치 보일러를 틀에서 찍어내 듯이 리액트를 미리 틀을 준비해놓고 쉽게 사용할 수 있는 틀에서 그냥 사용만 해보겠다 할 때 쓸 수 있는 것이다.
+쉽게 비유하자면, 제빵을 할 때 공장처럼 쉽게 찍어낼 수 있도록 빵틀같은 역할을 하는 패키지라고 생각할 수 있다.
+
+결론적으로 하나하나 설정할 필요없이 `Create react app`이라는 이름을 가진 리액트의 Boiler Plate를 이용하여 간단한 리액트 애플리케이션을 개발 할 수 있다.
+
+리액트 App을 만들기전에, 리액트도 하나의 패키지, 프로젝트이기 때문에 어떠한 root 폴더 아래에 위치를 해야한다.
+원하는 곳에 폴더를 만들어서 그 폴더 안에 리액트를 설치해보자.
+
+```
+npx -v // npx가 정상 설치되어있는지 확인하기
+npx create-reacte-app 프로젝트폴더명 // create-reacte-app뒤에 프로젝트 이름을 명시하여 설치해준다.
+```
+
+Create react app도 npm에 올라가있는 패키지이기 때문에 기본적으로 `npm i`이런식으로 설치해야 되지만, 한번 사용하고 말 것이기 때문에 `npx`를 이용한다.
+npx는 npm을 조금 더 편리하기 위해 이용하는 도구라고 생각하면 된다. 그냥 간단하게 설치되어 있지 않은 패키지를 딱 한번만 사용하고 싶을때 사용하는 도구이다.
+npx의 버전이 잘 명시가 되어있어야 성공적인 설치가 되어있다고 확인할 수 있다.
+만약 버전이 나오지 않았다면, 일단 node 자체가 제대로 설치되어 있는지 `node -v`로 확인을 해준다. 또는 `npm -v`으로 npm은 설치되어있는지 확인해준다.
+node와 npm이 정상적으로 설치되있는 상태라면 `npm install -g npx`로 npx 도구를 설치해준다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/e42fb85c-3559-486e-8e60-61a66267be69/image.png)
+
+정상적으로 설치가 완료되었다면, 위와 같이 해당 폴더안에 파일과 폴더들이 여러개가 생겨나게 된다.
+
 - React : Node 기반의 Javascript UI 라이브러리
 - 추가적인 라이브러리가 필요하다 (Webpack, Babel)
   - Webpack: 다수의 자바스크립트 파일을 하나의 파일로 합쳐주는 모듈 번들 라이브러리
