docs: 자바스크립트 이터레이터와 제너레이터, 이터러블 정리

--- a/main/Javascript/완벽가이드/12장-이터레이터와 제너레이터.md
+++ b/main/Javascript/완벽가이드/12장-이터레이터와 제너레이터.md
@@ -313,6 +313,16 @@ undefined 1
 
 ### 📌 제너레이터
 
+> **Generator는 순회가 가능한 데이터 컬렉션인 Iterable / Iterator 객체이다.**
+
+> **Generator 인스턴스는 Iterable 인터페이스와 Iterator 인터페이스를 동시에 구현한다.**
+
+- `function*` : Generator 함수 선언 키워드
+- `yield`: next메서드 호출시, value로 반환할 값에 사용하는 키워드. 다음 next가 호출될 때까지 해당 키워드에서 함수실행이 멈춘다.
+- `yield*`: 또 다른 Iterable 객체를 위임해서 사용하기 위한 키워드
+
+<br>
+
 ---
 
 ### 📌 참고 자료
@@ -323,6 +333,10 @@ https://velog.io/@thumb_hyeok/%EC%9E%90%EB%B0%94%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8
 
 https://ko.javascript.info/iterable
 
+https://ko.javascript.info/generators
+
 https://www.youtube.com/watch?v=JUS-7rQehMw&list=PLjQV3hketAJnP_ceUiPCc8GnNQ0REpCqr&index=20
 
 https://www.youtube.com/watch?v=IyLdUbzyqcs&list=PLjQV3hketAJnP_ceUiPCc8GnNQ0REpCqr&index=25
+
+https://www.youtube.com/watch?v=3uuBHt_SNTA
