--- a/main/Javascript/완벽가이드/11장.표준 라이브러리.md
+++ b/main/Javascript/완벽가이드/11장.표준 라이브러리.md
@@ -122,3 +122,143 @@ https://www.youtube.com/watch?v=We8JKbNQeLo
 ---
 
 - 30 Date, 31 RegExp, 37 Set, Map, 41 타이머, 43 Ajax,
+
+## Set과 Map
+
+자바스크립트의 Object 타입은 프로퍼티 이름인 문자열과 임의의 값을 연결하는 다재다능한 데이터 구조입니다.
+그리고 연결되는 값이 true처럼 고정된 값이면 그 개체는 문자열 세트나 마찬가지입니다.
+
+자바스크립트 프로그래밍에서는 객체를 실제로 맵과 세트처럼 사용하는 일이 흔하지만
+키가 문자열이어야 한다는 제약이 있고, 객체에서 일반적으로 상속하는 to String 같은 프로퍼티를 실제 맵과 세트에서 사용하는 경우는 드물기 때문에 과도하게 복잡해지기도 합니다.
+ES6에서 이 문제를 해결하고자 진정한 Set와 Map 클래스를 도입했습니다.
+
+### Set
+
+Set은 배열과 마찬가지로 값의 집합입니다.
+하지만 배열과 달리 Set은 순서가 없고 인덱스도 없으며, 중복을 허용하지 않습니다.
+값은 세트의 요소이거나 요소가 아닐 뿐, 그 값이 세트에 몇 개 있는지 알 수 없습니다.
+
+Set 객체는 `Set()` 생성자로 만듭니다.
+
+```js
+let s = new Set();
+let t = new Set([1, s]);
+
+let t = new Set(s);
+let unique = new Set("Mississippi"); // 'M', 'i', 's', 'p'
+unique.size; // 4
+```
+
+`Set()`생성자의 인자로는 배열과 Set 객체를 포함한 이터러블 객체 모두 허용됩니다.
+Set의 size 프로퍼티는 배열의 length 프로퍼티와 마찬가지로 Set에 포함된 값의 개수를 반환합니다.
+
+Set을 생성하면서 동시에 초기화할 필요는 없습니다.
+언제든 `add(), deleare(), clear()`로 요소를 추가하거나 제거할 수 있습니다.
+Set은 중복을 허용하지 않으므로 이미 Set에 존재하는 값을 추가해도 아무 효과가 없습니다.
+
+```js
+let s = new Set();
+s.add(1); // 1
+console.log(s);
+s.add(1); // 1
+console.log(s);
+s.add([1]);
+console.log(s);
+```
+
+`add()`메서드는 인자를 하나 받습니다.
+배열을 전달하면 개별 배열 요소가 아니라 배열 자체를 추가합니다.
+`add()`는 항상 자신을 호출한 Set를 반환하므로 Set에 여러 가지 값을 추가할 때는 `s.add('a').add('b').add('c')`처럼 메서드를 체인으로 연결할 수 있습니다.
+
+```js
+let s = new Set("abc");
+s.delete(1); // false
+s.delete("a"); // true
+console.log(s); // { 'b', 'c' }
+```
+
+`delete()`메서드는 세트 요소를 한 번에 하나씩 삭제합니다. 불 값을 반환하며, 지정한 값이 실제로 세트의 요소라면 그 요소를 제거하고 true를 반환합니다.
+그렇지 않다면 아무 일도 하지 않고 false를 반환합니다.
+
+Set는 일치 여부를 판할 때 `===`연산자처럼 엄격하게 체크합니다.
+Set는 숫자 1과 문자열 '1'을 별개의 값으로 간주하므로 세트 요소로 이 둘을 모두 포함할 수 있습니다.
+값이 객체, 배열, 함수일 경우에도 `===`로 비교합니다.
+
+```js
+let s = new Set();
+s.add([1, 2, 3]);
+s.delete([1, 2, 3]); // false
+```
+
+Set의 배열을 삭제할 수 없었던 이유가 이 때문입니다. 배열을 세트에 추가한 다음 `delete()`메서드에 요소는 같지만 다른 배열을 전달해 제거하려고 시도해서 실패했습니다. 삭제에 성공하려면 정확히 같은 배열을 가리키는 참조를 전달해야 합니다.
+
+```js
+const arr = [1, 2, 3];
+const s = new Set();
+s.add(arr);
+s.delete(arr); // true
+```
+
+현실에서 Set로 할 수 있는 가장 중요한 일은 요소를 추가하거나 제거하는 일이 아니라 지정된 값이 Set의 요소인지 체크하는 일입니다.
+`has()`메서드가 바로 그 일을 담당합니다.
+
+```js
+let s = new Set([2, 3, 5, 7]);
+s.has(2); // true
+s.has(4); // false
+s.has("3"); // false
+```
+
+Set에 광해 이해해야 할 가장 중요한 점은 Set가 요소의 존재 여부를 확인하는데 최적화 되어 있으며, Set에 요소가 얼마나 많든 has()메서드는 아주 빠르다는 점입니다.
+배열의 `includes()`메서드도 요소의 존재 여부를 확인하지만 배열 크기에 따라 속도가 달리지며,
+배열을 세트처럼 사용하면 실제 Set 객체에 비해 훨씬 느릴 수 있습니다.
+
+Set 클래스는 이터러블이므로 for/of 루프로 Set의 요소를 열거할 수 있습니다. 또한, 분해 연산자 `...`를 써서 배열이나 인자 리스트로 변환할 수 있습니다.
+
+```js
+let s = new Set([2, 3, 5, 7]);
+
+let sum = 0;
+for (let p of s) {
+  sum += p;
+}
+sum; // 17
+
+const max = Math.max(...s); // 7
+const arr = [...s]; // [2, 3, 5, 7]
+
+let product = 1;
+s.forEach((n) => (product *= n));
+product; // 210
+```
+
+Set는 종종 순서 없는 집합이라고 표현되지만 자바스크립트의 Set 클래스는 그렇지 않습니다.
+자바스크립트 Set는 인덱스가 없으므로 배열처럼 첫 번째 요소가 뭐지, 혹은 마지막 요소가 뭔지 알 수 없습니다.
+하지만 자바스크립트 Set 클래스는 항상 요소가 삽입된 순서를 기억하고 있으며, Set를 순회할 때 항상 이 순서대로 순회합니다.
+Set에 첫 번째로 삽입한 요소는 순회할 때도 첫 번째로 반환되며, 마지막에 삽입한 요소는 마지막으로 반환됩니다.
+
+```js
+const arr = [1, 2, 3];
+const s = new Set([1, 2, 3]);
+
+arr.forEach((value, index) => console.log(value, index));
+/*
+1 0
+2 1
+3 2
+*/
+
+s.forEach((value, index) => console.log(value, index));
+/*
+1 1
+2 2
+3 3
+*/
+```
+
+Set 클래스는 이터러블이기도 하지만 `forEach()`메서드 또한 지원합니다.
+배열의 `forEach()`메서드는 배열 인덱스를 두 번째 인자로 전달하지만 세트에는 인덱스가 없으므로 Set클래스의 `forEach()`는 첫 번째와 두번째 인자 모두에 요소 값을 전달합니다.
+
+<br>
+
+---
