docs: 자바스크립트 Map 정리

--- a/main/Javascript/완벽가이드/11장.표준 라이브러리.md
+++ b/main/Javascript/완벽가이드/11장.표준 라이브러리.md
@@ -262,3 +262,98 @@ Set 클래스는 이터러블이기도 하지만 `forEach()`메서드 또한 지
 <br>
 
 ---
+
+### Map 클래스
+
+Map 객체는 키로 구성된 값 집합이며 각 키는 다시 다른 값과 연결됩니다.
+어떤 면에서는 Map도 배열과 비슷하지만, 연속된 정수를 키로 사용하는 대신 임의의 값을 인덱스로 사용할 수 있습니다.
+배열과 마찬가지로 Map도 아주 빠른 데이터 구조를 갖습니다.
+Map의 크기와 상관없이 키와 연결된 값을 빨리 찾을 수 있습니다. (배열만큼 빠르지는 않습니다.)
+
+새 Map을 생성할 때는 `Map()`생성자를 사용합니다.
+
+```js
+let m = new Map();
+let n = new Map([
+  ["one", 1],
+  ["two", 2],
+]);
+
+let copy = new Map(n); // [['one', 1], ['two', 2]]
+let obj = { x: 1, y: 2 };
+let p = new Map(Object.entries(obj)); // [['x', 1], ['y', 2]];
+```
+
+`Map()` 생성자의 선택 사항인 인자는 `[key, value]`배열을 전달하는 이터러블 객체여야 합니다.
+따라서 Map을 생성하는 동시에 초기화하고 싶다면 원하는 키와 값을 배열의 배열 형태로 준비해야 합니다.
+하지만 다음과 같이 `Map()` 생성자로 다른 Map을복사하거나 기존 객체의 프로퍼티 이름과 값을 복사할 수 있습니다.
+
+Map 객체를 만들면 `get()`으로 주어진 키와 연결된 값을 검색할 수 있고, `set()`으로 키-값 쌍을 추가할 수 있습니다.
+하지만 Map은 키의 집합이며 각 키가 값과 연결될 뿐, 키-값 쌍 집합이 아닙니다.
+Map에 이미 존재하는 키로 `set()`을 호출하면 해당 키에 연결된 값을 수정할 뿐, 새 키-값 쌍을 맵에 추가하는 것은 아닙니다.
+Map 클래스는 `get()`과 `set()` 외에도 Set과 비슷한 메서드를 가집니다.
+지정된 키가 맵에 존재하는지 확인할 때는 `has()`를,
+키를 제거하고 연결된 값도 제거할 때는 `delete()`를,
+맵에서 키-값 쌍을 모두 제거할 때는 `clear()`를,
+맵에 포함된 키의 개수를 확인할 때는 `size` 프로퍼티를 사용합니다.
+
+```js
+let m = new Map().set("one", 1).set("two", 2).set("three", 3);
+m.size; // 3
+m.get("two"); // 2
+```
+
+세트의 `add()`메서드와 마찬가지로 맵의 `set()`메서드 역시 체인으로 연결할 수 있으므로,
+맵을 초기화할 때 배열의 배열을 사용하지 않아도 됩니다.
+
+세트와 마찬기로 자바스크립트 값이라면 어떤 것이든 맵의 키나 값으로 사용할 수 있습니다.
+`null, undefined, NaN`, 객체와 배열같은 참조 타입도 가능합니다.
+
+또한 Set 클래스와 마찬가지로 맵도 키를 비교할 때 동등성이 아니라 일치성으로 비교하므로 객체나 배열을 키로 사용한다면 그 프로퍼티와 요소가 정확히 일치하더라도 항상 다른 것으로 판단합니다.
+
+```js
+let m = new Map([
+  ["x", 1],
+  ["y", 2],
+]);
+[...m]; // [['x', 1], ['y', 2]]
+
+for (let [key, value] of m) {
+  console.log(key, value);
+}
+
+/*
+x 1
+y 2
+*/
+
+[...m.keys()]; // ['x', 'y']
+[...m.values()]; // [1, 2]
+[...m.entries()]; // [['x', 1], ['y', 2]]
+
+m.forEach((value, key) => {
+  console.log(value, key);
+});
+
+/*
+1 'x'
+2 'y'
+*/
+```
+
+Map 객체는 이터러블이며 순회할 때 반환되는 값은, 첫 번째 요소는 키이고 두번째 요소는 값인 배열입니다.
+Map 객체에 분해 연산자를 사용하면 `Map()`생성자에 전달했을 배열의 배열을 반환합니다.
+for/of 루프로 맵을 순회할 때는 다음과 같이 분해 할당을 써서 키와 값을 별도의 변수에 할당하는 것이 일반적입니다.
+
+Set 클래스와 마찬가지로 Map 클래스 역시 삽입된 순서대로 순회합니다.
+맵에 처음으로 추가한 키-값 쌍이 순회할 때도 첫 번째로 반환되며, 마지막으로 추가한 키-값 쌍이 순회할 때도 마지막으로 반환됩니다.
+
+맵의 키나 값 중 하나만 순회하고 싶을 때는 `keys()`와 `values()`메서드를 사용하면 됩니다.
+이들은 키나 값을 삽입 순서대로 순회하는 이터러블 객체를 반환합니다.
+`entries()`메서드가 키-값 쌍으로 이루어진 이터러블 객체를 반환하긴 하지만 맵을 직접 순회하는 것과 차이가 없습니다.
+
+Map객체는 Array 클래스의 forEach() 메서드도 지원합니다.
+
+for/of에서는 키가 앞에 있으므로 위 예제에서 값 매개변수가 키 매개변수보다 앞에 있는 것이 이상해 보일 수 있습니다.
+맵은 정수인 배열 인덱스를 임의의 키 값으로 대체한 일반화된 배열이라고 볼 수 있습니다.
+배열의 `forEach()`메서드는 배열 요소 다음에 배열 인덱스를 전달하므로, 맵의 `forEach()`메서드는 이에 맞게 맵의 값을 먼저 전달하고, 그 다음에 맵의 키를 전달합니다.
