docs: 정규표현식 개념정리

--- a/main/Javascript/완벽가이드/11장.표준 라이브러리.md
+++ b/main/Javascript/완벽가이드/11장.표준 라이브러리.md
@@ -119,6 +119,8 @@ https://www.redhat.com/en/topics/api/what-are-application-programming-interfaces
 
 https://www.youtube.com/watch?v=We8JKbNQeLo
 
+https://www.youtube.com/watch?v=_eEZqTx5N7s&list=PLgXGHBqgT2TvpJ_p9L_yZKPifgdBOzdVH&index=53
+
 ---
 
 - 30 Date, 31 RegExp, 37 Set, Map, 41 타이머, 43 Ajax,
@@ -357,3 +359,276 @@ Map객체는 Array 클래스의 forEach() 메서드도 지원합니다.
 for/of에서는 키가 앞에 있으므로 위 예제에서 값 매개변수가 키 매개변수보다 앞에 있는 것이 이상해 보일 수 있습니다.
 맵은 정수인 배열 인덱스를 임의의 키 값으로 대체한 일반화된 배열이라고 볼 수 있습니다.
 배열의 `forEach()`메서드는 배열 요소 다음에 배열 인덱스를 전달하므로, 맵의 `forEach()`메서드는 이에 맞게 맵의 값을 먼저 전달하고, 그 다음에 맵의 키를 전달합니다.
+
+<br>
+
+---
+
+### WeakMap과 WeakSet
+
+WeakMap 클래스는 Map 클래스의 변형이지만 서브클래스는 아닙니다.
+이 클래스는 키 값이 가비지 컬렉션에 포함되지 않게 막아 주지 않습니다.
+가비지 컬렉션은 자바스크립트 인터프리터가 프로그램에서 더는 접근하거나 사용할 수 없는 객체가 사용하던 메모리를 회수하는 작업입니다.
+
+일반적인 맵은 키 값을 강하게 참조하며 키 값에 대한 다른 참조가 더 이상 남아 있지 않더라도 참조 관계를 유지합니다.
+반면 WeakMap은 키 값을 약하게 참조하므로 WeakMap을 통해 해당 키 값을 참조할 수 없고, 키 값이 WeakMap에 존재하더라도 메모리를 회수할 수 있습니다.
+
+`WeakMap()`생성자는 `Map()` 생성자와 비슷하지만 WeakMap과 Map 사이에는 중요한 차이가 있습니다.
+
+- WeakMap의 키는 반드시 객체 또는 배열이어야 합니다.
+- 기본 값은 가비지 컬렉션 대상이 되지 않으며 키로 사용할 수 없습니다.
+
+- WeakMap에는 `get(), set(), has(), delete()`메서드만 있습니다.
+  특히 WeakMap은 이터러블이 아니며 `keys(), values(), forEach()`메서드가 없습니다.
+  WeakMap이 이터러블이었다면 키에 접근할 수 있게 되므로 약한 참조가 성립할 수 없습니다.
+
+- WeakMap에는 size 프로퍼티가 없습니다. WeakMap의 크기는 가비지 컬렉션이 일어날 때마다 언제든 바뀔 수 있기 때문입니다.
+
+WeakMap의 설계 의도는 메모리 누수를 방지하면서 객체와 값을 연결할 수 있게 하는 겁니다.
+Map 객체를 통해 캐시를 구현한다면 객체에서 사용하는 메모리를 회수할 가능성이 전혀 없지만, WeakMap을 사용하면 그런 문제가 생기지 않습니다.
+
+WeakSet는 객체가 가비지 컬렉션에 포함되도록 허용하는 객체 세트입니다.
+
+- WeakSet는 기본 값을 요소로 허용하지 않습니다.
+- WeakSet는 오직 `add(), has(), delete()`메서드만 가지며 이터러블이 아닙니다.
+- WeakSet에는 size 프로퍼티가 없습니다.
+
+WeakSet는 자주 사용되지는 않으며 용도는 WeakMap과 비슷합니다.
+예를 들어 객체에 특별한 프로퍼티나 타입이 있다고 분류하고 싶다면 WeakSet에 추가하는 방법이 있습니다.
+그리고 다른 코드에서 그 프로퍼티나 타입을 체크할 때 WeakSet의 요소인지 확인하면 됩니다.
+일반적인 세트로 이런 일을 하면 마크된 객체는 모두 가비지 컬렉션 대상이 되지 않지만, WeakSet를 사용하면 그런 걱정이 필요 없습니다.
+
+<br>
+
+---
+
+### 정규표현식과 패턴 매칭
+
+정규 표현식은 텍스트 패턴을 정의하는 객체입니다.
+자바스크립트의 RegExp 클래스는 정규 표현식이며 문자열과 RegExp 모두 정규 표현식을 사용해 텍스트에서 패턴을 찾고 대체하는 메서드를 정의합니다.
+하지만 RegExp API를 효율적으로 사용하려면 정규 표현식 문법을 사용해 텍스트 패턴을 만는는 법도 알아야 하는데, 정규 표현식은 그 자체로 하나의 작은 프로그래밍 언어입니다.
+
+### 정규표현식 정의
+
+자바스크립트에서는 RegExp 객체로 정규 표현식을 표현합니다.
+물론 `RegExp()`생성자로도 RegExp 객체를 생성할 수 있지만, 보통은 특별한 리터럴 문법을 더 자주 사용합니다.
+문자열 리터럴이 따옴표 안에 문자를 쓰는 것과 마찬가지로 정규 표현식 리터럴은 슬래시 (/) 한 쌍 안에 문자를 씁니다.
+
+```js
+let pattern = /s$/;
+
+let pattern = new RegExp("s$");
+```
+
+위 행은 RegExp 객체를 생성하고 이를 변수 pattern에 할당합니다.
+이 RegExp 객체는 s로 끝나는 문자열 전체에 일치합니다.
+이 정규 표현식은 다음과 같이 `RegExp()` 생성자로도 정의할 수 있습니다.
+
+<br>
+
+---
+
+정규표현식을 왜 학습해야 하는가?
+
+만약 비밀번호의 조건을 설정해야 되는 상황이 주어졌다고 가정해봅시다.
+
+- 8자 이상, 16자 이하
+- 숫자, 문자, 특수문자가 모두 포함되어 있어야 합니다.
+
+```js
+const isValidLength = (str) => {
+  str.length >= 8 && str.length <= 16
+}
+
+const isIncludeNum = (str) => {
+  str.some((character) => character >= '0' && character <= '9';)
+}
+
+...
+```
+
+보통은 이런식으로 함수형으로 분리해서 작성을 하지만, 만약 조건이 점점 늘어날수록 코드가 길어지고 복잡해지는 문제를 맞이합니다.
+
+정규표현식의 사용법을 알고있다면, 같은 조건이 주어졌을 때 이 조건이 복잡하다고 판단한다면 자연스레 정규식을 작성할 것 입니다.
+
+보통 정규식 작성보단 구글링에 의존하게 되는데, 애플리케이션의 특성상 조건이 늘어나게 된다면 이 또한 한계를 맞이하게 됩니다.
+
+정규표현식은 패스워드 유효성 뿐 만아니라, URL 제거, 주석 제거, 특정 단어 치환등 많은 상황에서 유용하게 사용될 수 있습니다.
+때문에 정규표현식을 활용한다면 보다 더 편리하게 문자열을 다룰 수 있을 것입니다.
+
+- 정규표현식의 기본 문법
+- 정규표현식 활용 예시
+- 자바스크립트에서의 정규표현식 활용
+
+짧고 굵게 정규표현식에서 기본적으로 많이 사용되는 문법 위주로 살펴봅시다.
+
+우선 문자에 대한 문법입니다.
+기본적으로 JS 내에서는 슬래쉬(/) 안에 해당 정규표현식 패턴을 삽입하면 정규 표현식이 선언됩니다.
+
+```js
+/ABC/
+/\d/
+/\D/
+/\w/
+/\W/
+/\s/
+/\b/
+```
+
+백슬래쉬(`\`) 소문자 d를 사용하면 숫자만을 Selecting 할 수 있습니다.
+반대로 백슬래쉬(`\`)대문자 D를 사용하면 문자만을 Selecting 할 수 있습니다.
+w 키워드는 word의 약자로, 문자를 나타날 때 사용합니다. (대문자, 소문자, `_`(언더스코어)까지 포함합니다.)
+대문자 W는 word가 아닌 것들을 나타냅니다.
+
+`\s`키워드는 tab과 space 등 공백을 나타냅니다.
+`\b`키워드도 위와 유사하지만, boundary의 약자로 위치(경계)를 나타냅니다.
+(`^`문장의 시작, `$`문장의 끝 처럼 위치를 나타냅니다.)
+`\s`키워드는 공백을 Selecting하는 반면, `\b`키워드는 Selecting에 포함되지 않습니다.
+
+다음은 문자의 수를 제한할 수 있는 수량자에 대한 기본 문법입니다.
+
+```js
+/a{n,m}/ //a가 n번이상 m번 이하 반복됨을 뜻합니다.
+/a?/
+/a+/
+/a*/
+```
+
+기본적으로 문자 뒤에 중괄호를 사용하게 되면 문자의 수를 표현할 수 있습니다.
+중괄호 앞의 문자열이 첫번째 숫자 이상, 2번째 숫자 이하 반복됨을 나타냅니다.
+
+`?`키워드는 `{0,1}`과 동일합니다. 앞에 있는 문자열이 없거나, 1개 임을 표현할 수 있습니다.
+`+`키워드는 해당 문자열이 1번 이상 반복됨을 뜻합니다. `{1,}`과 동일합니다.
+`*`키워드는 `?`와 `+`를 합친 키워드라고 볼 수 있습니다. 앞에 문자가 0번 이상 반복됨을 뜻하는 키워드 입니다.
+`{0,}`와 동일합니다.
+
+```js
+/\b(\d{2})-(?:\d{4})-(?<lastNumber>\d{4})\b/g;
+
+console.log(
+  "01-2222-3333".match(/\b(\d{2})-(?:\d{4})-(?<lastNumber>\d{4})\b/).groups
+    .lastNumber
+); // 3333
+```
+
+정규표현식에서는 Group이라는 기능을 소괄호`()`를 통해서 사용할 수 있습니다.
+기본적으로 소괄호로 문자열을 감싸면 해당 그룹을 캡처링 할 수 있습니다.
+캡처링 된 그룹들은 `match`나 `exec`메서드를 통해 확인할 수 있습니다.
+
+캡처링을 원하지 않고 그룹핑만을 원한다면, `(?:)`을 사용하여 캡처링에서 제외되고, 다음 인덱스부터 이어서 캡처링을 진행하게 됩니다.
+이러한 그룹핑에서도 이름을 붙일 수 있는데 `(?<groupName>)`을 사용하면 그룹의 이름을 지정할 수 있습니다.
+match나 exec의 groups 프로퍼티에서 해당 name으로 접근이 가능합니다.
+
+```js
+/\d{2}(?=-\d{2})/g; // - 앞의 2자리 숫자를 셀렉팅하는 표현식
+```
+
+그룹핑과 많이 혼동하는게 `(?=)`키워드 입니다.
+해당 키워드는 전방 탐색 키워드로 일치 영역을 발견해도 그 값을 반환하지 않습니다.
+
+### 정규표현식 활용 예시
+
+정규표현식을 사용해서 휴대폰 번호의 조건을 설정해봅시다.
+먼저, 요구사항을 작성합니다.
+
+- 첫 세글자는 01x(x는 숫자)의 형태입니다.
+- 구분자는 -, 공백, /을 허용합니다.
+- 두번째 구역은 3글자 이상 4글자 이하, 마지막 구역은 4글자의 숫자로 이루어집니다.
+
+```js
+/^01\d[-\s/]\d{3,4}[-\s/]\d{4}$/;
+```
+
+일단 첫번째 조건을 만족시키기 위해 시작을 나타내는 `^`캐럿과 함께 작성합니다.
+01과 함께 숫자를 나타내는 `\d`키워드를 사용해줍니다.
+
+2번째 조건인 구분자는 -, 공백, `/`를 허용해주기로 하였으므로, `[]`을 통해 연산자를 대체해주고, -와 공백을 표현하는 `\s`키워드, `/`로 표현해줍니다.
+
+마지막 조건을 만족시켜주기 위해선, 두번째 구역은 3글자 이상 4글자 이하, 마지막 구역은 4글자 이하로 표현해야 하므로,
+숫자를 나타내는 형식은 `\d`키워드와 함께 `{}`로 표현해줍니다.
+
+이렇게 작성을 완료한 테스트가 항상 옳을 수는 없습니다.
+때문에 테스트는 필수적입니다. `https://regexr.com` 사이트를 이용하면 여러가지 테스트 케이스를 작성하면서 오류가 있는지 확인할 수 있습니다.
+
+이와 같은 방식을 사용한다면, 휴대폰 번호의 조건 뿐만이 아니라, 이메일, 주민등록번호와 같은 복잡한 정규식도 생각보다 손쉽게 작성할 수 있습니다.
+
+```js
+// 이메일 조건
+/^(?=[^_])+[￦w-.]+@[a-zA-Z0-9]+￦.[a-zA-Z0-9]+$/;
+
+// 주민등록번호
+/^[\d]{2}(?:(?:0[13578]|1[02])(?:[0-2]\d|3[01])|(?:02(?:[01]\d|2[0-9]))|(?:0[469]|11)(?:[0-2]\d|30))[-/.][1-4]\d{6}$/;
+```
+
+### 자바스크립트에서의 정규표현식 활용
+
+`/RegExp/flags`
+
+정규표현식은 기본적으로 슬래쉬안에 패턴을 삽입하고, flags를 옵션으로 삽입할 수 있습니다.
+
+- g: global의 약자, 전 구역을 복수로 검사합니다.
+- i: ignore의 약자, 대소문자를 구분하지 않습니다.
+- m: multiline의 약자, 다중행 검사를 합니다.
+
+다음은 JS에서 정규표현식을 활용하는 메서드들 입니다.
+
+- `String.prototype.match()` : 정규식과 겹치는 전체 문자열을 첫번째 요소로 포함하는 Array를 반환한 다음 괄호 안에 캡처된 결과를 리턴합니다.
+
+```js
+"I am Super Man 12345".match(/\d/); // ['1', index: 15, input: 'I am Super Man 12345', groups: undefined]
+"I am Super Man 12345".match(/\d/g); // ['1', '2', '3', '4', '5']
+```
+
+match와 group 네이밍을 활용해서 다음과 같이 주민번호에서 생년월일을 손쉽게 추출 해낼 수 있습니다.
+
+```js
+const { year, month, date } = "970201-1111111".match(
+  /^(?<year>\d{2})(?<month>\d{2})(?<date>\d{2})/
+).groups;
+console.log(year, "년", month, "월", date, "일생"); // 97 년 02 월 01 일생
+```
+
+다음은 유효성 검사에서 가장 많이 사용하는 `test()`메서드입니다.
+
+- `RegExp.prototype.test()` : 주어진 문자열이 정규표현식을 만족하는지를 Boolean으로 반환해줍니다.
+
+```js
+/^01[\d][-\s/]\d{3,4}[-\s/]\d{4}$/.test("010-1111-2222"); // true
+/^01[\d][-\s/]\d{3,4}[-\s/]\d{4}$/.test("010-1111-222"); // false
+```
+
+앞서 작성했던 휴대폰 번호의 조건을 활용하여 해당 문자열이 조건을 만족하는지 확인할 수 있습니다.
+
+- `String.prototype.replace()`: 패턴에 일치하는 문자열의 일부 또는 모든 부분을 교체한 문자열을 반환합니다.
+
+```js
+const reg = /(-\d)(\d*)/
+'980828-2345'.replace(reg, '*'); // '980828*' 뒷 번호를 *으로 변환
+
+String.replace(reg, function(match, p1, p2, ..., offset, string) {
+  return ...;
+})
+
+'980828-2345'.replace(reg, (match, p1, p2,) => p1 + ('*'.repeat(p2.length))); // '980828-2***'
+```
+
+replace의 두번째 인자로 함수를 넣을 수 있습니다.
+replace의 첫번째 인자로는 정규식을 담은 후 두번째 인자로 함수를 넣으면, 함수의 파라미터로 4가지 종류의 인자를 받을 수 있습니다.
+
+- match : 매치된 문자열
+- p1, p2, ... : 그룹화된 문자열 순서대로 인자로 받을 수 있습니다.
+- offset: 매치된 문자열의 index
+- string: 조사된 전체 문자열
+
+위의 예시와 같이 찾은 문자열에 따라 동적으로 변환을 원할때 유용하게 사용할 수 있습니다.
+
+그렇다면, 이렇게 유용해보이는 정규표현식이 항상 좋을까요?
+당연히 그것은 아닙니다.
+
+정규표현식 엔진은 대부분 백트래킹을 사용하기 때문에, 최악의 경우 시간복잡도를 O(2^n)이 나오게 됩니다.
+따라서 일반 내장 메서드나 for문보다 크진 않지만 성능상 떨어질 수 있습니다.
+또 좋지 않은 가독성이 정규 표현식의 가장 큰 단점입니다.
+기본적으로 정규표현식은 가독성이 좋지 않습니다. 일반적으로 사용되는 문자열이 아닌 meta문자열을 사용하기 때문에 기본적으로 가독성이 떨어질 수 밖에 없습니다.
+
+따라서 간단한 로직은 내장 메서드를 활용해서 함수 분리를 하는 것이 성능이나 가독성면에서 더 좋고,
+복잡하고 복합적인 로직을 검사하고 싶을때는 정규표현식이 유용하게 사용됩니다.
