docs: 자주 사용하는 정규표현식 정리

--- a/main/Javascript/완벽가이드/11장.표준 라이브러리.md
+++ b/main/Javascript/완벽가이드/11장.표준 라이브러리.md
@@ -719,3 +719,94 @@ function changeDot(input2) {
 const input2 = "a...b...c..d.e";
 console.log(changeDot(input2)); // a.b.c..d.e
 ```
+
+#### 정규표현식
+
+```js
+const tel1 = "010-1234-567팔";
+const tel2 = "010-1234-5678";
+
+// 정규 표현식 리터럴로 휴대폰 전화번호 패턴을 정의한다.
+const regExp = /^\d{3}-\d{4}-\d{4}$/;
+
+// tel이 휴대폰 전화번호 패턴에 매칭하는지 테스트(확인)한다.
+regExp.test(tel1); // false
+regExp.test(tel2); // true
+```
+
+```js
+const str = "ABC";
+const regExp = /abc/i;
+const regExp2 = /abc/;
+
+regExp.test(str); // true;
+regExp2.test(str); // false;
+```
+
+플러그에 i가 오는 경우 대소문자를 구별하지 않고 검색합니다.
+
+```js
+const str = "IS this all there is?";
+const regexp = /is/gi;
+const regexp2 = /is/i;
+const regexp3 = /is/;
+
+str.match(regexp); //  ['IS', 'is', 'is']
+str.match(regexp2); // ['IS', index: 0, input: 'IS this all there is?', groups: undefined]
+
+regexp3.exec(str); // ['is', index: 5, input: 'IS this all there is?', groups: undefined]
+regexp2.exec(str); // ['IS', index: 0, input: 'IS this all there is?', groups: undefined]
+regexp.exec(str);
+```
+
+```js
+const regexp = new RegExp(/is/i);
+```
+
+ES6에서 정규표현식을 생성자로 생성해서 사용할 수 있게 되었지만, 굳이 생성자를 사용하지않고 바로 쓰는 방식으로 많이 사용된다.
+
+플러그 g는 global, 문자열의 행이 바뀌더라도 패턴 검색을 계속합니다.
+
+```js
+const target = "A AA B BB Aa Bb AAA";
+
+// 'A'가 최소 1번, 최대 2번 반복되는 문자열을 전역 검색
+const regExp = /A{1,2}/g;
+
+target.match(regExp); //  ['A', 'AA', 'A', 'AA', 'A']
+
+// 공백이 들어가있는 단어에 대해서만 찾음
+const regExp2 = /A{1,2}\s/g;
+target.match(regExp2); // ['A ', 'AA ']
+
+// 'A'가 2개 이상 들어가 있는 문자열 검색
+const regExp3 = /A{2,}/g;
+target.match(regExp3); // ['AA', 'AAA']
+```
+
+```js
+// 영어 대문자, 소문자, 한글, 숫자가 한번 이상 반복되는 문자열을 전역 검색
+const regExp = /[A-Za-z가-힣ㄱ-ㅎ0-9]+/ㅎ;
+
+// 알파벳,숫자,언더스코어, 콤마 까지 포함된 word를 의미한다.
+const regExp2 = /[\w,]+/g;
+// w를 제외한 모든 것
+const regExp3 = /[\W,]+/g;
+```
+
+```js
+// https로 시작하는 문자열인지 테스트
+const target = "https://www.naver.com";
+
+const regExp = /^https/;
+regExp.test(target); // true
+
+// com으로 끝나는지 테스트
+const regExp2 = /com$/;
+regExp2.test(target); // true
+
+// https:// 또는 http:// 로 시작하는지 테스트
+// 안쪽에서 슬래쉬를 사용하고 싶을땐 이스케이프 사용
+const regExp3 = /^https?:\/\//.test(target); // true
+regExp3.test("httppps://"); // false
+```
