--- a/sub/ETC/섹션3기술면접.md
+++ b/sub/ETC/섹션3기술면접.md
@@ -1,5 +1,3 @@
-## 네트워크 심화
-
 ### IP 프로토콜의 한계에 대해서 설명해주세요.
 
 IP 프로토콜의 한계는 대표적으로 **비연결성**과 **비신뢰성**이라고 말할 수 있습니다.
@@ -16,7 +14,7 @@ IP 프로토콜의 한계는 대표적으로 **비연결성**과 **비신뢰성*
 그리고 데이터를 전달하는 도중 패킷이 중간에 소실되거나, 클라이언트가 요청한 순서대로 서버에 도착할거란 신뢰성을 가질 수가 없습니다.
 
 따라서 이러한 IP 프로토콜이 가지고 있는 비연결성과 비신뢰성이라는 한계를 보완하기 위해
-전송 계층에서 대표적으로 **TCP**(전송제어 프로토콜)와 **UDP**(사용자 데이터그램 프로토콜)등을 사용하여 이러한 문제를 해결 해줍니다.
+전송 계층에서 대표적으로 전송제어 프로토콜인 **TCP**와 사용자 데이터그램 프로토콜인 **UDP**등 을 사용하여 이러한 문제를 해결 해줍니다.
 
 <br>
 
@@ -37,7 +35,12 @@ IP 프로토콜 보다 더 높은 계층에 TCP 프로토콜이 존재하기 때
 네트워크 프로토콜 계층은 **OSI 7계층**과 **TCP/IP 4계층**으로 나눌 수 있습니다.
 
 TCP/IP 4계층은 OSI 7계층보다 먼저 개발되었고
-네트워크 인터페이스 계층(L1,L2), 인터넷 계층(L3), 전송계층(L4), 어플리케이션 계층(L5,L6,L7)으로 분류되어 있으며
+
+- 네트워크 인터페이스 계층(L1,L2),
+- 인터넷 계층(L3),
+- 전송계층(L4),
+- 어플리케이션 계층(L5,L6,L7)으로 분류되어 있으며
+
 실제 네트워크 표준은 업계 표준을 따르는 TCP/IP 4계층에 가깝습니다.
 
 따라서 TCP/IP 4계층 모델을 중심으로 전송 계층을 대해 설명하자면
@@ -45,20 +48,46 @@ IP 프로토콜 보다 더 높은 계층에 TCP 프로토콜이 존재하기 때
 
 전송 계층에서 하는 역할을 한마디로 정리하자면, 송신자와 수신자를 연결하는 통신 서비스를 제공합니다.
 
-연결 지향 데이터 스트림 지원, 신뢰성, 흐름 제어를 제공하며 애플리케이션과 인터넷 계층 사이에 존재하기 때문에
-데이터가 전달될 때의 중계 역할을 수행합니다.
+`연결 지향 데이터 스트림 지원, 신뢰성, 흐름 제어`를 제공하며
+애플리케이션과 인터넷 계층 사이에 존재하기 때문에 데이터가 전달될 때의 **중계 역할**을 수행합니다.
 
 이러한 계층적인 특징을 기반으로, 대표적으로 TCP와 UDP가 사용됩니다.
 
-**TCP**(Transmission Control Protocol 전송제어 프로토콜)는
-패킷 사이의 **순서를 보장**하고 **연결지향 프로토콜(3 way handshake- 3 웨이 핸드셰이크라는 가상연결)**을 사용해서 연결을 하여
+> 먼저 **TCP**(Transmission Control Protocol 전송제어 프로토콜)는
+> 세그먼트라는 통신 단위로 데이터를 전달하며, 세그먼트 내에는 출발지 PORT, 목적지 PORT, 전송 제어, 순서, 검증 정보 등의 정보가 함께 들어있습니다.
+
+조금 더 자세히 설명하자면, 패킷 사이의 **순서를 보장**하고
+**연결지향 프로토콜(3 way handshake- 3 웨이 핸드셰이크라는 가상연결)**을 사용해서 연결을 하여
 신뢰성을 구축해 수신 여부를 확인하며 **가상회선 패킷 교환 방식**을 사용합니다.
 
-**데이터 전달 보증**이 가능하기 때문에 IP프로토콜의 비연결성과 비신뢰성의 한계를 보완할 수 있습니다.
-(메시지 보내면 패킷이 중간에 누락되면 반대편에서 메시지를 못받았다는 것을 알려준다)
+TCP는 **데이터 전달 보증**이 가능하기 때문에 IP프로토콜의 비연결성과 비신뢰성의 한계를 보완할 수 있습니다.
+(메시지 보내면 패킷이 중간에 누락되면 반대편에서 메시지를 못받았다는 것을 알려준다.)
 
 - **연결지향 프로토콜 3 웨이 핸드셰이크**
   클라이언트와 서버가 통신할 때 3 웨이 핸드셰이크는 **SYN 단계**, **SYN + ACK 단계**, **ACK 단계**의 세 단계의 과정을 거칩니다.
-  (Synchronize, Acknowledgment의 약자)
+  (Synchronize 연결 요청 플래그, Acknowledgment 응답 요청 플래그의 약자, ISN은 Initial Sequence Numbers 초기 네트워크 연결을 할 때 할당된 32비트 고유 시퀀스 번호)
 
-**UDP**(사용자 데이터그램 프로토콜)는 순서를 보장하지 않고 수신 여부를 확인하지 않으며 단순히 데이터만 주는 데이터그램 패킷 교환 방식을 사용합니다.
+  1. 클라이언트는 서버에 클라이언트의 ISN을 담아 SYN을 보냅니다.
+  2. 서버는 클라이언트의 SYN를 수신하고 서버의 ISN을 보내며 승인번호로 클라이언트의 ISN+1을 보냅니다.
+  3. 클라이언트는 서버의 ISN + 1 한 값인 승인번호를 담아 ACK를 서버에 보냅니다.
+
+  이렇게 3-웨이 핸드셰이크 과정 이후 신뢰성이 구축되고 데이터 전송을 시작하기때문에 신뢰성이 있는 계층이라고 합니다.
+
+- **가상회선 패킷 교환 방식**은
+  각 패킷에 가상회선 식별자가 포함되며 모든 패킷을 전송하면 가상회선이 해제되고 패킷들은 전송된 순서대로 도착하는 방식을 말합니다.
+
+**UDP**(사용자 데이터그램 프로토콜)는 TCP와는 다르게 순서를 보장하지 않고 수신 여부를 확인하지 않으며 단순히 데이터만 주는 데이터그램 패킷 교환 방식을 사용합니다.
+
+TCP처럼 연결 지향도 아니고, 데이터 전달을 보증하지도 않고, 순서를 보장하지도 않습니다.
+(하지만, PORT 가 추가됩니다.)
+
+**데이터그램 패킷 교환 방식**이란 패킷이 독립적으로 이동하며 최적의 경로를 선택하여 가는데 하나의 메세지에서 분할된 여러 팻킷은 서로 다른 경로로 전송될 수 있으며 도착한 수서가 다를 수 있는 방식을 뜻합니다.
+
+그럼에도 불구하고 요즘 UDP가 뜨고 있는데, TCP와 같은 기능들이 없어 단순하고 속도가 빠르기 때문입니다.
+백지이기 때문에 기능을 추가하기에도 좋다는 장점을 가지고 있습니다.
+
+### 패킷에 대한 추가질문
+
+패킷은 기본적으로 Header와 Payload로 나뉘며 분류되어있고, Header에 출발지와 도착지에 대한 IP 주소가 담깁니다.
+MTU는 최대 1500까지의 크기 제한이 있기때문에 패킷으로 작게 쪼갠 데이터 조각 하나를 의미합니다.
+MTU 네트워크에 연결된 장치가 받아들일 수 있는 최대 데이터 패킷 크기를 말합니다.
