--- a/sub/Algorithm/그래프와 인접행렬.md
+++ b/sub/Algorithm/그래프와 인접행렬.md
@@ -7,15 +7,18 @@
 예를 들어, 여러 도시들을 연결하는 도로망, 사람들 간의 지인 관계, 웹 사이트 간의 링크 관계 등이
 일상 생활에서 찾을 수 있는 연결 구조라고 볼 수 있습니다.
 
-그래프를 프로그램 코드 안에서는 어떻게 표현하는지에 대해 배워봅시다.
+그렇다면 그래프를 프로그램 코드 안에서는 어떻게 표현하는지에 대해 살펴봅시다. 🤔
+
+**그래프의 구조**
+
+> **그래프는 V(정점)와 E(간선)로 구성된 자료구조입니다.**
+
+![](https://velog.velcdn.com/images/ninto_2/post/67975bcf-30ef-4615-8c9d-113cb53e5b82/image.png)
 
 그래프는 기호로 `G(V, E)` 로 표현합니다.
 
-> - G : Graph의 약자
-
+- G : Graph의 약자
 - V : Vertex (정점)들의 집합
 - E : 정점들을 연결하는 Edge (간선)들의 집합
-
-그래프는 V와 E로 구성된 자료구조입니다.
 
 1. 무방향 그래프
